test/libsolidity/syntaxTests/code/usage_as_identifier/usage_as_string_varible.sol
contract X {
    function codeAsInt() external {
        string calldata code;
    }
}
// ----
// ParserError 3548: (73-77): Location already specified.
// ParserError 2314: (77-78): Expected identifier but got ';'
